$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-13 (opened September 26, 2010)

	* nestednodf: Gustavo Carvalho sent a new upgraded version which
	also implements a new quantitative method of Almeida-Neto & Ulrich
	(Env Mod Software, in press; 2010). Based on feature request #1097
	in R-Forge. 

	* ordistep: name clash if the fitted model contained item or term
	called 'mod'. Reported by Richard Telford (Bergen, Norway).

	* fitspecaccum: Stephen Sefick suggested adding Michaelis-Menten
	fit to random species accumulation and sent his model function.
	These ideas were used to add a new more general function. In
	addition, there is an option of fitting Arrhenius model S = c*A^z
	with a new self stargint function SSarrhenius() for nls(). No
	documentation yet: needs work.

	* decorana: gives warning if residual is bigger than tolerance.
	
Version 1.18-12 (closed September 26, 2010)

	* swan: no eternal loop with disconnected data where zeros will
	remain in the matrix.

	* ordilabel: gained argument 'col' to set the text colour of the
	labels separately from 'border' (default action is to use 'border'
	colour). 

	* ordiellipse: gained argument 'col'. For draw = "lines" this
	works similarly as previously when 'col' was passed on. For draw =
	"polygon" 'col' sets only the polygon fill, and the text of the
	labels will use the colour of the border or of the foreground.

	* ordiR2step: gained argument 'direction = c("both", "response")',
	and iwth "both" gives also adjusted R2 when dropping terms. I have
	not yet seen a case where a terms is dropped. Abandoned dangerous
	practice of getting the R2.all directly from a fitted model of the
	'scope' since this may have different lhs.

	* anova.ccalist: removed. Revisions were 1273, 1274, 1276. Could
	not make this work consistently with other anova models, except
	with 'model = "direct"'. The function would also chage the API so
	that "..." come as the second argument breaking partial matching